--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -8,8 +8,8 @@
 /* Generic content, such as the index list pages */
 /* ------------------------------------------------------------------------ */
 :root * {
-      text-align: left;
-      text-rendering: optimizeLegibility;
+  text-align: left;
+  text-rendering: optimizeLegibility;
 }
 
 :focus {
@@ -19,34 +19,35 @@
 }
 
 ::selection {
-    color: #fffff8;
-    background-color: #404040;
+  color: #fffff8;
+  background-color: #404040;
 }
 
 a.heading-anchor {
-    display: none;
-    visibility: collapse;
+  display: none;
+  visibility: collapse;
 }
 
 h2 {
-    margin-top: 5.5rem;
+  margin-top: 5.5rem;
 }
 
 h2:hover > a.heading-anchor,
 h3:hover > a.heading-anchor {
-    display: inline;
-    visibility: visible;
+  display: inline;
+  visibility: visible;
 }
 
 hr {
-    text-align: left;
-    margin-left: 0;
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
-    width: 75%;
-    max-width: 45rem;
-    border-style: solid none none none;
-    border-color: #111;
+  text-align: left;
+  margin-left: 0;
+  margin-top: 1.4rem;
+  margin-bottom: 1.4rem;
+  width: 75%;
+  max-width: 45rem;
+  border-style: solid none none none;
+  border-width: 2px;
+  border-color: #1d1f21;
 }
 
 kbd {
@@ -57,80 +58,86 @@ kbd {
 }
 
 mark {
-    background: #f0d9bb;
+  background: #f0d9bb;
 }
 
 /* ------------------------------------------------------------------------ */
 /* Styling for listing pages. */
 /* ------------------------------------------------------------------------ */
 .list-page {
-    ul {
-        list-style-type: none;
-        margin: -0.25em;
-        width: 87.5%;
-        max-width: 45rem;
-    }
-    li {
-        margin: 0;
-        /*font-size: 95%;*/
-    }
+  ul {
+    list-style-type: none;
+    margin: -0.25em;
+    width: 87.5%;
+    max-width: 45rem;
+  }
+  li {
+    margin: 0;
+    /*font-size: 95%;*/
+  }
 }
 .list-page .list-date {
-    display: inline;
-    font-size: 0.75em;
-    /* padding-right: 2em; */
-    /* margin-right: 2em; */
+  display: inline;
+  font-size: 0.75em;
+  /* padding-right: 2em; */
+  /* margin-right: 2em; */
 }
 
 table:not(.lntable) {
-    margin-top: 1.4em;
-    font-size: 1.4rem;
-    width: auto; /* making booktabs style tables the unstyled default in case someone uses Markdown styling */
-    /* margin: 0 auto; */
-    /* border-spacing: 0px; */
+  margin-top: 1.4em;
+  font-size: 1.4rem;
+  width: auto; /* making booktabs style tables the unstyled default in case someone uses Markdown styling */
+  /* margin: 0 auto; */
+  /* border-spacing: 0px; */
 }
 
 table:not(.lntable) tr th {
-  border-bottom: 1px solid #111;
+  border-bottom: 1px solid #f06767;
   text-transform: uppercase;
+}
+
+table:not(.lntable) tr th:not(:last-child),
+table:not(.lntable) tr td:not(:last-child) {
+  border-right: 1px solid #f06767;
 }
 
 table:not(.lntable) tr th,
 table:not(.lntable) tr td {
-    padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 table.lntable {
-    td.lntd {
-        padding: 0em;
-    }
-    border-spacing: 0;
-    padding: 0;
+  td.lntd {
+    padding: 0em;
+  }
+  border-spacing: 0;
+  padding: 0;
 }
 
 /* ------------------------------------------------------------------------ */
 /* Styling for footnotes. */
 /* ------------------------------------------------------------------------ */
 .footnotes hr {
-    margin-top: 4.4em;
+  margin-top: 4.4em;
 }
 
 .footnotes ol {
-    width: 55%;
-    margin-top: 4.4rem;
+  width: 55%;
+  margin-top: 4.4rem;
 
-    li {
-        p {
-            width: 100%;
-            margin: 0;
-            padding: 0;
+  li {
+    p {
+      width: 100%;
+      margin: 0;
+      padding: 0;
 
-            a.footnote-backref {
-                font-size: 1.2rem;
-                text-decoration: none;
-            }
-        }
+      a.footnote-backref {
+        font-size: 1.2rem;
+        text-decoration: none;
+      }
     }
+  }
 }
 
 /* ------------------------------------------------------------------------ */
@@ -144,30 +151,30 @@ table.lntable {
 
 mjx-container[jax="CHTML"][display="true"],
 .katex-display {
-      overflow: auto;
-      overflow-y: hidden;
-/*     -ms-overflow-style: none;
+  overflow: auto;
+  overflow-y: hidden;
+  /*     -ms-overflow-style: none;
     scrollbar-width: none; */
 }
-
 
 /* ------------------------------------------------------------------------ */
 /* Styling for margin/side notes. */
 /* ------------------------------------------------------------------------ */
 .marginnote .marginnote-ind,
 .sidenote .sidenote-number {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 /* prevent over-crowding */
 
-.sidenote, .marginnote {
-    margin-bottom: 1rem;
+.sidenote,
+.marginnote {
+  margin-bottom: 1rem;
 }
 
 .sidenote code,
 .marginnote code {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 /* ------------------------------------------------------------------------ */
@@ -243,14 +250,14 @@ mjx-container[jax="CHTML"][display="true"],
 /* Styling for buttons. */
 /* ------------------------------------------------------------------------ */
 .btn {
-    display: inline-block;
-    margin-top: 1.4rem;
+  display: inline-block;
+  margin-top: 1.4rem;
 }
 .btn button {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 .btn button .icon {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 /* ------------------------------------------------------------------------ */
@@ -259,17 +266,19 @@ mjx-container[jax="CHTML"][display="true"],
 
 /* reduce zh & ja font-size to match en */
 
-p:lang(zh), span:lang(zh),
-p:lang(ja), span:lang(ja), {
-    font-size: 1.2rem;
+p:lang(zh),
+span:lang(zh),
+p:lang(ja),
+span:lang(ja) {
+  font-size: 1.2rem;
 }
 
 .sidenote:lang(zh),
 .marginnote:lang(zh) {
-    font-size: 0.5rem;
+  font-size: 0.5rem;
 }
 
 .sidenote:lang(ja),
 .marginnote:lang(ja) {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
