Minor css improvement for table header

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -92,6 +92,7 @@ table:not(.lntable) {
 }
 
 table:not(.lntable) tr th {
+  color: #ebcb8b;
   border-bottom: 1px solid #f06767;
   text-transform: uppercase;
 }
