--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -81,12 +81,22 @@ html {
 }
 
 body {
+  --text-color: #2c2c2c;
+  --bg-color: #fffff1;
+}
+
+body.dark-mode {
+  --text-color: #fffff1;
+  --bg-color: #2c2c2c;
+}
+
+body {
   margin-left: auto;
   margin-right: auto;
   padding-left: 12.5%;
   font-family: $serif-fonts;
-  background-color: #2c2c2c;
-  color: #fffff1;
+  background-color: var(--bg-color);
+  color: var(--text-color);
   max-width: 1400px;
 }
 
@@ -213,7 +223,7 @@ blockquote {
   width: 50%;
   padding: 5px 10px;
   font-size: 1.4rem;
-  background-color: rgba(51, 51, 51, 0.5);
+  background-color: rgba(51, 51, 51, 0.4);
 }
 
 blockquote::before {
