Slightly Improved Print Support
Side / Margin Notes still don't come up on portrait mode, however they
are visible in landscape mode. In future we should fix this.

--- a/assets/scss/hugo-tufte.scss
+++ b/assets/scss/hugo-tufte.scss
@@ -14,6 +14,8 @@
 @import "components/brand";
 @import "components/meta";
 
+@import "print";
+
 // Look at this https://gohugo.io/hugo-pipes/resource-from-template/#readout
 {{ if and (isset .Site.Params "codeblocksdark") .Site.Params.codeBlocksDark  }}
 @import "syntax/highlight-dark.scss"
