--- a/assets/scss/pages/footer.scss
+++ b/assets/scss/pages/footer.scss
@@ -1,7 +1,7 @@
 /* Footer, but with a different name to avoid conflicts with tufte.css */
 footer.page-footer {
   margin-top: 1.4rem;
-  color: #fffff1;
+  color: var(--text-color);
   width: 95%;
   max-width: 45rem;
 }
