Improve partial content.header
Add Tags, Categories separately with improved styles

--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -138,6 +138,15 @@ h3 {
   line-height: 1;
 }
 
+.readtime,
+.tags,
+.categories {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 1rem auto 1rem 0;
+  line-height: 1;
+}
+
 .subtitle {
   font-style: italic;
   margin-top: 1rem;
