--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -427,6 +427,8 @@ div.table-wrapper {
 code,
 .code,
 kbd {
+  color: #f8f8f2;
+  background-color: #1d1f21;
   font-family: $mono-fonts;
   font-size: 1.125rem;
   line-height: 1.42;
