Add kbd shortcode and improved styles

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -51,10 +51,8 @@ hr {
 }
 
 kbd {
-  border: 1px #111 solid;
-  border-radius: 5px;
-  padding-right: 2px;
-  padding-left: 2px;
+  padding: 5px;
+  font-size: 12px;
 }
 
 mark {
