--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -427,8 +427,10 @@ div.table-wrapper {
 code,
 .code,
 kbd {
-  color: #f8f8f2;
-  background-color: #1d1f21;
+  padding: 2px;
+  border-radius: 5px;
+  color: var(--bg-color);
+  background-color: var(--text-color);
   font-family: $mono-fonts;
   font-size: 1.125rem;
   line-height: 1.42;
