--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,3 +1,3 @@
-{{- if and (not .Params.disableDisqus) (.Site.DisqusShortnamd) -}}
+{{- if and (not .Params.disableDisqus) (.Site.DisqusShortname) -}}
   {{ template "_internal/disqus.html" . }}
 {{- end -}}
