--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,6 +1,5 @@
-{{ partial "header.html" . }}
+{{ define "main" }}
 
-<body>
 <div id="layout" class="pure-g">
 <article class="pure-u-1">
 {{ partial "brand.html" . }}
@@ -60,5 +59,5 @@
 {{ partial "footer.html" . }}
 </article>
 </div>
-</body>
-</html>
+
+{{ end }}
