--- a/layouts/partials/theme-toggle.html
+++ b/layouts/partials/theme-toggle.html
@@ -24,9 +24,7 @@
 **/
 
 .js-toggle-wrapper {
-    display: table;
     margin: 0 auto;
-    margin-top: 10px;
 }
 
 .js-toggle {
@@ -37,6 +35,7 @@
     background-color: transparent;
     border: 0;
     padding: 0;
+    vertical-align: sub;
     -webkit-touch-callout: none;
     user-select: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
