--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -32,3 +32,5 @@
 <link rel="stylesheet" href="{{ $ht_o_style.Permalink | relURL }}">
 
 <link rel="stylesheet" href="{{ "/css/hugo-tufte-override.css" | relURL }}">
+
+{{ template "_internal/google_analytics.html" . }}
