Add support for RSS

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,4 +13,8 @@
 <link rel="apple-touch-icon" href="{{ .Site.Params.touchicon | absURL }}" />
 {{ end }}
   {{ partial "header.includes.html" . }}
+
+{{ with .OutputFormats.Get "rss" -}}
+  {{ printf `<link rel=%q type=%q href=%q title=%q>` .Rel .MediaType.Type .Permalink site.Title | safeHTML }}
+{{ end }}
 </head>
