--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -31,6 +31,8 @@
 {{ $ht_o_style := resources.Get "scss/hugo-tufte-options.scss"| resources.ExecuteAsTemplate "main.scss" .  | resources.ToCSS $ht_o_options }}
 <link rel="stylesheet" href="{{ $ht_o_style.Permalink | relURL }}">
 
-<link rel="stylesheet" href="{{ "/css/hugo-tufte-override.css" | relURL }}">
+{{ $js_toggle_options := (dict "targetPath" "/css/js-toggle.min.css" "outputStyle" "compressed" "enableSourceMap" true) }}
+{{ $js_toggle_style := resources.Get "scss/js-toggle.scss" | resources.ExecuteAsTemplate "main.scss" . | resources.ToCSS $js_toggle_options }}
+<link rel="stylesheet" href="{{ $js_toggle_style.Permalink | relURL }}">
 
 {{ template "_internal/google_analytics.html" . }}
