--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,5 +1,5 @@
 {{- if and (not .Params.disableDisqus) (.Site.Config.Services.Disqus.Shortname) -}}
-  <p>
+  <div style="width: 55%;">
     {{ template "_internal/disqus.html" . }}
-  </p>
+  </div>
 {{- end -}}
