Add sharing buttons

--- a/assets/scss/hugo-tufte.scss
+++ b/assets/scss/hugo-tufte.scss
@@ -13,6 +13,7 @@
 @import "components/nav";
 @import "components/brand";
 @import "components/meta";
+@import "components/sharing-buttons";
 
 @import "print";
 
