--- a/assets/scss/tufte.scss
+++ b/assets/scss/tufte.scss
@@ -130,7 +130,7 @@ h2 {
 h3 {
   font-size: 1.7rem;
   margin-top: 2rem;
-  color: #ffbf00;
+  color: #1f51ff;
 }
 
 h4 {
@@ -240,7 +240,7 @@ blockquote {
   width: 50%;
   padding: 5px 10px;
   font-size: 1.4rem;
-  background-color: rgba(51, 51, 51, 0.4);
+  background-color: rgba(138, 138, 138, 0.2);
 }
 
 blockquote::before {
