Add few meta tags to be more shareable

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,6 +4,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <meta name="description"
     content="{{ with .Description }}{{ . }}{{ else }}{{ with .Summary }}{{ . }}{{ else }}{{ .Site.Params.description }}{{end }}{{ end }} ">
+
+<meta property="og:title" content="{{ .Title }}" />
+<meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ with .Summary }}{{ . }}{{ else }}{{ .Site.Params.description }}{{end }}{{ end }}" />
+<meta property="og:url" content="{{ .Permalink }}" />
+
 <link rel="canonical" href="{{ .Permalink }}" />
 <!-- favicon -->
 {{ if .Site.Params.favicon }}
