--- a/layouts/partials/header.includes.html
+++ b/layouts/partials/header.includes.html
@@ -24,15 +24,15 @@
 <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.css"> -->
 
 {{ $htoptions := (dict "targetPath" "/css/hugo-tufte.min.css" "outputStyle" "compressed" "enableSourceMap" true) }}
-{{ $htstyle := resources.Get "scss/hugo-tufte.scss"| resources.ExecuteAsTemplate "main.scss" .  | resources.ToCSS $htoptions }}
+{{ $htstyle := resources.Get "scss/hugo-tufte.scss"| resources.ExecuteAsTemplate "main.scss" .  | css.Sass $htoptions }}
 <link rel="stylesheet" href="{{ $htstyle.Permalink | relURL }}">
 
 {{ $ht_o_options := (dict "targetPath" "/css/hugo-tufte-options.min.css" "outputStyle" "compressed" "enableSourceMap" true) }}
-{{ $ht_o_style := resources.Get "scss/hugo-tufte-options.scss"| resources.ExecuteAsTemplate "main.scss" .  | resources.ToCSS $ht_o_options }}
+{{ $ht_o_style := resources.Get "scss/hugo-tufte-options.scss"| resources.ExecuteAsTemplate "main.scss" .  | css.Sass $ht_o_options }}
 <link rel="stylesheet" href="{{ $ht_o_style.Permalink | relURL }}">
 
 {{ $js_toggle_options := (dict "targetPath" "/css/js-toggle.min.css" "outputStyle" "compressed" "enableSourceMap" true) }}
-{{ $js_toggle_style := resources.Get "scss/js-toggle.scss" | resources.ExecuteAsTemplate "main.scss" . | resources.ToCSS $js_toggle_options }}
+{{ $js_toggle_style := resources.Get "scss/js-toggle.scss" | resources.ExecuteAsTemplate "main.scss" . | css.Sass $js_toggle_options }}
 <link rel="stylesheet" href="{{ $js_toggle_style.Permalink | relURL }}">
 
 {{ template "_internal/google_analytics.html" . }}
