Move from disqus to Utterances

--- a/assets/scss/general.scss
+++ b/assets/scss/general.scss
@@ -277,3 +277,8 @@ span:lang(ja) {
 .marginnote:lang(ja) {
   font-size: 0.9rem;
 }
+
+.utterances {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
